--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,20 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  div Ceci est du contenu dans un div
-  div Voici les donnes : #{data}
+    h1= title
+    p Welcome to #{title}
+    if cars.length > 0
+        table
+            thead
+                tr
+                    th Premier
+            tbody
+                each car in cars
+                    tr
+                        td= car.nom
+                        td
+                            
+                            
+    else
+        div nothing to show here...
+        
