Affichage de JSON sur la page installations.

--- a/views/installations.pug
+++ b/views/installations.pug
@@ -3,3 +3,6 @@ extends layout
 block content
     h1= title
     p This page outputs the installations.
+    div
+        pre= installations
+         
