--- a/views/installations.pug
+++ b/views/installations.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-    h1= title
-    p This page outputs the installations.
-    div
-        pre= installations
+    div.myDiv
+        h1= title
+        p This page outputs the installations.
+        div
+            pre= installations
          
