--- a/views/index.pug
+++ b/views/index.pug
@@ -1,13 +1,19 @@
 extends layout
 
 block content
-    div.myDiv
+    div.content
         h1= title
+        div.form-content
             form(method='POST' action='')
                 lu
                     li
-                        label(for='input') Input
-                        input.form-control(type='text')
+                        label(for='arrondissement') Filtre
+                        input.form-control(type='text' placeholder='Arrondissement')
+                    li
+                        label(for='nom') Nom de l'installation
+                        select
+                            option(value='Test1') Test1
+                            option(value='Test2') Test2
                     li
                         button.btn.btn-primary(type='submit') Submit
-    
+        
