Restructuration du code (moins de fonctions)

--- a/views/installations.pug
+++ b/views/installations.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    div.myDiv
+    div.content
         h1= title
         p This page outputs the installations.
         div
