--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,5 +8,6 @@ html
         div.topnav
             a(href="/") Home 
             a(href="/installations") Installations
+            a(href="/doc") Documentation
         block content
         
