Ajout de RAML bidon et pages d'erreurs.

--- a/views/doc.pug
+++ b/views/doc.pug
@@ -1,6 +1,7 @@
-extends layout
-
-block content
- div.content
-     h1 La doc
-     p Bienvenue a la doc
+//- extends layout
+//- 
+//- block content
+//-  div.content
+//-      h1 La doc
+//-      p Bienvenue a la doc
+#{content}
