--- a/views/index.pug
+++ b/views/index.pug
@@ -4,16 +4,19 @@ block content
     div.content
         h1= title
         div.form-content
+            h2 Recherche
             form(method='POST' action='')
                 lu
                     li
-                        label(for='arrondissement') Filtre
+                        label(for='arrondissement') Par arrondissement
                         input.form-control(type='text' placeholder='Arrondissement')
+                    li
+                        button.btn.btn-primary(type='submit') Submit
                     li 
-                        label(for='nom') Nom de l'installation
+                        label(for='nom') Par nom d'installation
                         select
-                            option(value='Test1') Test1
-                            option(value='Test2') Test2
+                            each installlation in installlations
+                                option(value=installlation) #{installlation}
                     li
                         button.btn.btn-primary(type='submit') Submit
         
