--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,11 +9,22 @@ body {
 }
 
 .form-content {
-    margin: 50px 0 0 0;
+    margin: 50px 50px 0 0;
     padding: 20px;
-    max-width: 250px;
+    width: 25%;
     background: #e8eeef;
     border-radius: 8px;
+    float: left;
+}
+
+.table-content {
+    margin: 50px 50px 0 0;
+    padding: 20px;
+    width: 25%;
+    background: #e8eeef;
+    border-radius: 8px;
+    float: left;
+    display:inline;
 }
 
 .topnav {
