Renommage de fonctions et fichiers.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,6 @@ html
     body
         div.topnav
             a(href="/") Home 
-            a(href="/installations") Installations
-            a(href="/doc") Documentation
+            a(href="/doc") Documentation REST
         block content
         
