--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,18 @@ body {
     background: #F7F7F7;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(odd){background-color: #F7F7F7}
+
 .content {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -20,7 +32,7 @@ body {
 .table-content {
     margin: 50px 50px 0 0;
     padding: 20px;
-    width: 25%;
+    width: 64%;
     background: #e8eeef;
     border-radius: 8px;
     float: left;
