Nettoyage du code et renommage fonctions.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
     margin:0;
-    background: #F7F7F7;
+    background: #f7f7f7;
 }
 
 table {
@@ -13,7 +13,7 @@ th, td {
     padding: 8px;
 }
 
-tr:nth-child(odd){background-color: #F7F7F7}
+tr:nth-child(odd){background-color: #f7f7f7}
 
 .content {
   padding: 50px;
@@ -60,7 +60,7 @@ tr:nth-child(odd){background-color: #F7F7F7}
 }
 
 .topnav a.active {
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: white;
 }
 
