Amélioration du error handler.

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ extends layout
 
 block content
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-    script(src="javascripts/test.js")
+    script(src="javascripts/scripts.js")
     div.content
         h1= title
         div.form-content
@@ -46,4 +46,7 @@ block content
                         th Arrondissement
                         th Type
                 tbody(id='table-content')
-                    
+                        td Nothing to show here...
+                        td
+                        td
+                        td
