Ajoht REST: modification condition.

--- a/views/index.pug
+++ b/views/index.pug
@@ -45,8 +45,10 @@ block content
                         th Adresse
                         th Arrondissement
                         th Type
+                        th Condition
                 tbody(id='table-content')
                         td Nothing to show here...
+                        td
                         td
                         td
                         td
