--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,10 +17,19 @@ html
     head
         meta(charset='utf-8')
         title= title
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css' integrity='sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb' crossorigin='anonymous')
+        link(rel='stylesheet', href='stylesheets/style.css')
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js')
+        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js')
+        script(src="javascripts/scripts.js")
+
     body
-        div.topnav
-            a(href="/") Home 
-            a(href="/doc") Documentation REST
+        nav(class="navbar navbar-expand-sm bg-dark navbar-dark")
+            ul(class="navbar-nav")
+                li(class="nav-item active")
+                    a(class="nav-link" href="/") Home
+                li(class="nav-item")
+                    a(class="nav-link" href="/doc") Documentation REST
         block content
         
