--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,114 +1,16 @@
 body {
-    margin:0;
-    background: #f7f7f7;
+    background-color: #F3F3F3;
+}
+div.col-sm-3 {
+    margin: 25px;
+    background-color: #D9D9D9;
+    border-radius: 15px;
 }
 
-table {
-    border-collapse: collapse;
-    width: 100%;
+div.col-sm-8 {
+    margin: 25px;    
 }
 
-th, td {
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(odd){background-color: #f7f7f7}
-
-.content {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-.form-content {
-    margin: 50px 50px 0 0;
-    padding: 20px;
-    width: 25%;
-    background: #e8eeef;
-    border-radius: 8px;
-    float: left;
-}
-
-.table-content {
-    margin: 50px 50px 0 0;
-    padding: 20px;
-    width: 64%;
-    background: #e8eeef;
-    border-radius: 8px;
-    float: left;
-    display:inline;
-}
-
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
-
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 15px 15px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.topnav a.active {
-    background-color: #4caf50;
-    color: white;
-}
-
-li {
-    padding: 0;
-    display: block;
-    list-style: none;
-    margin: 10px 0 0 0;
-}
-
-label {
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    margin:0 0 3px 0;
-    padding:0px;
-    display:block;
-    font-weight: bold;
-}
-
-input {
-    width: 100%;
-    background: #fff;
-    margin-bottom: 4%;
-    border: 1px solid #ccc;
-    padding: 3%;
-    color: #555;
-    font: 95% Arial, Helvetica, sans-serif;
-}
-
-select {
-    width: 100%;
-    background: #fff;
-    margin-bottom: 4%;
-    border: 1px solid #ccc;
-    padding: 3%;
-    color: #555;
-    font: 95% Arial, Helvetica, sans-serif;
-}
-
-button.btn.btn-primary {
-    background: #1abc9c;
-    padding: 8px 15px 8px 15px;
-    border: none;
-    color: #fff;
-}
-
-button.btn.btn-primary:hover {
-    background: #109177;
-    box-shadow:none;
-    -moz-box-shadow:none;
-    -webkit-box-shadow:none;
+button {
+    margin-top: 15px;
 }
