Recherche par _id au lieu du nom d'installation

--- a/views/index.pug
+++ b/views/index.pug
@@ -27,13 +27,13 @@ block content
                 form(method='GET' action='' id="form-nom")
                     div(class="form-group")
                         label(for='nom') Par nom d'installation
-                        select(class='selectpicker' id='installations')
+                        select(id='installations')
                             each installation in installations
-                                option(value=installation  id='field-nom') #{installation}
+                                option(value=installation.nom  id='field-nom') #{installation.nom}
                         button(id='submitNom' class="btn btn-primary") Submit
             div(class="col-sm-8")
                 div(class="container")
-                    table(id="myTable" class="table")
+                    table(id="myTable" class="table table-striped table-hover")
                         thead
                             tr
                             tr
@@ -43,6 +43,7 @@ block content
                                 th Type
                                 th Condition
                         tbody(id='table-content')
+                            tr
                                 td Nothing to show here...
                                 td
                                 td
