--- a/views/500.pug
+++ b/views/500.pug
@@ -18,5 +18,4 @@ block content
     div.content
       h1 Oh oh, somehting went bad on server side...
       p Error was logged, our developpers are working on it.
-      div
-          #{error}
+      div #{error}
