--- a/views/index.pug
+++ b/views/index.pug
@@ -28,8 +28,8 @@ block content
                     div(class="form-group")
                         label(for='nom') Par nom d'installation
                         select(id='installations')
-                            each installation in installations
-                                option(value=installation.nom  id='field-nom') #{installation.nom}
+                            each value,key in installations
+                                option(value=key  id='field-nom') #{value}
                         button(id='submitNom' class="btn btn-primary") Submit
             div(class="col-sm-8")
                 div(class="container")
