--- a/views/index.pug
+++ b/views/index.pug
@@ -15,37 +15,28 @@
 extends layout
 
 block content
+    div(class="modal fade" id="myModal" role="dialog")
+        div(class="modal-dialog")
+            div(class="modal-content")
+                div(class="modal-header")
+                    h4(class="modal-title") Header
+                div(class="modal-body")
+                    form(method='GET' action='' id='form-arrondissement')
+                        div(class="form-group" class="col-form-label")
+                            label(for='arrondissement') Par arrondissement
+                            input(type='text' class="form-control" id="field-arrondissement" placeholder='Arrondissement')
+                            button(id='submitArrondissement' class="btn btn-primary" data-dismiss="modal") Submit
+                    form(method='GET' action='' id="form-nom")
+                        div(class="form-group")
+                            label(for='nom') Par nom d'installation
+                            select(id='installations')
+                                each installation in installations
+                                    option(value=installation id='field-nom') #{installation}
+                            button(id='submitNom' class="btn btn-primary" data-dismiss="modal") Submit
+                div(class="modal-footer")
+                    button(type="button" class="btn btn-default" data-dismiss="modal") Close
     div(class="container-fluid")
-        div(class="row")
-            div(class="col-sm-3")
-                h2 Recherche
-                form(method='GET' action='' id='form-arrondissement')
-                    div(class="form-group" class="col-form-label")
-                        label(for='arrondissement') Par arrondissement
-                        input(type='text' class="form-control" id="field-arrondissement" placeholder='Arrondissement')
-                        button(id='submitArrondissement' class="btn btn-primary") Submit
-                form(method='GET' action='' id="form-nom")
-                    div(class="form-group")
-                        label(for='nom') Par nom d'installation
-                        select(id='installations')
-                            each installation in installations
-                                option(value=installation id='field-nom') #{installation}
-                        button(id='submitNom' class="btn btn-primary") Submit
-            div(class="col-sm-8")
-                div(class="container")
-                    table(id="myTable" class="table table-striped table-hover")
-                        thead
-                            tr
-                            tr
-                                th Nom
-                                th Adresse
-                                th Arrondissement
-                                th Type
-                                th Condition
-                        tbody(id='table-content')
-                            tr
-                                td Nothing to show here...
-                                td
-                                td
-                                td
-                                td
+        h2 Hey look, a search button! Just Click on it to search various things.
+        button(type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal") Recherche
+    div(class="container-fluid")
+        table(id="myTable" class="table table-striped table-hover")
