--- a/views/index.pug
+++ b/views/index.pug
@@ -15,11 +15,11 @@
 extends layout
 
 block content
-    div(class="modal fade" id="myModal" role="dialog")
+    div(class="modal fade" id="searchModal" role="dialog")
         div(class="modal-dialog")
             div(class="modal-content")
                 div(class="modal-header")
-                    h4(class="modal-title") Header
+                    h4(class="modal-title") Recherche d'installations
                 div(class="modal-body")
                     form(method='GET' action='' id='form-arrondissement')
                         div(class="form-group" class="col-form-label")
@@ -37,6 +37,29 @@ block content
                     button(type="button" class="btn btn-default" data-dismiss="modal") Close
     div(class="container-fluid")
         h2 Hey look, a search button! Just Click on it to search various things.
-        button(type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal") Recherche
+        button(type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#searchModal") Recherche
     div(class="container-fluid")
         table(id="myTable" class="table table-striped table-hover")
+    div(class="modal fade" id="installationModal" role="dialog")
+        div(class="modal-dialog")
+            div(class="modal-content")
+                div(class="modal-header")
+                    h4(class="modal-title") Installation
+                div(class="modal-body")
+                    form(method='GET' action='' id='form-arrondissement')
+                        div(class="form-group" class="col-form-label")
+                            label(for='arrondissement') Par arrondissement
+                            input(type='text' class="form-control" id="field-arrondissement" placeholder='Arrondissement')
+                            button(id='submitArrondissement' class="btn btn-primary" data-dismiss="modal") Submit
+                    form(method='GET' action='' id="form-nom")
+                        div(class="form-group")
+                            label(for='nom') Par nom d'installation
+                            select(id='installations')
+                                each installation in installations
+                                    option(value=installation id='field-nom') #{installation}
+                            button(id='submitNom' class="btn btn-primary" data-dismiss="modal") Submit
+                div(class="modal-footer")
+                    div(class="btn-group" role="group")
+                        button(type="button" class="btn btn-default" data-dismiss="modal") Submit Changes
+                        button(type="button" class="btn btn-default" data-dismiss="modal") Delete installation
+                        button(type="button" class="btn btn-default" data-dismiss="modal") Cancel
