--- a/views/index.pug
+++ b/views/index.pug
@@ -40,26 +40,15 @@ block content
         button(type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#searchModal") Recherche
     div(class="container-fluid")
         table(id="myTable" class="table table-striped table-hover")
-    div(class="modal fade" id="installationModal" role="dialog")
-        div(class="modal-dialog")
-            div(class="modal-content")
-                div(class="modal-header")
-                    h4(class="modal-title") Installation
-                div(class="modal-body")
-                    form(method='GET' action='' id='form-arrondissement')
-                        div(class="form-group" class="col-form-label")
-                            label(for='arrondissement') Par arrondissement
-                            input(type='text' class="form-control" id="field-arrondissement" placeholder='Arrondissement')
-                            button(id='submitArrondissement' class="btn btn-primary" data-dismiss="modal") Submit
-                    form(method='GET' action='' id="form-nom")
-                        div(class="form-group")
-                            label(for='nom') Par nom d'installation
-                            select(id='installations')
-                                each installation in installations
-                                    option(value=installation id='field-nom') #{installation}
-                            button(id='submitNom' class="btn btn-primary" data-dismiss="modal") Submit
-                div(class="modal-footer")
-                    div(class="btn-group" role="group")
-                        button(type="button" class="btn btn-default" data-dismiss="modal") Submit Changes
-                        button(type="button" class="btn btn-default" data-dismiss="modal") Delete installation
-                        button(type="button" class="btn btn-default" data-dismiss="modal") Cancel
+    //- div(class="modal fade" id="installationModal" role="dialog")
+    //-     div(class="modal-dialog")
+    //-         div(class="modal-content")
+    //-             div(class="modal-header")
+    //-                 h4(class="modal-title") Installation
+    //-             div(class="modal-body")
+    //-                 div(id="installationForm" method="post" class="form-horizontal" style="display: none;")
+    //-             div(class="modal-footer")
+    //-                 div(class="btn-group" role="group")
+    //-                     button(type="button" class="btn btn-default" data-dismiss="modal") Submit Changes
+    //-                     button(type="button" class="btn btn-default" data-dismiss="modal") Delete installation
+    //-                     button(type="button" class="btn btn-default" data-dismiss="modal") Cancel
