--- a/views/index.pug
+++ b/views/index.pug
@@ -38,17 +38,25 @@ block content
     div(class="container-fluid")
         h2 Hey look, a search button! Just Click on it to search various things.
         button(type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#searchModal") Recherche
-    div(class="container-fluid")
+    div(class="table-responsive")
         table(id="myTable" class="table table-striped table-hover")
-    //- div(class="modal fade" id="installationModal" role="dialog")
-    //-     div(class="modal-dialog")
-    //-         div(class="modal-content")
-    //-             div(class="modal-header")
-    //-                 h4(class="modal-title") Installation
-    //-             div(class="modal-body")
-    //-                 div(id="installationForm" method="post" class="form-horizontal" style="display: none;")
-    //-             div(class="modal-footer")
-    //-                 div(class="btn-group" role="group")
-    //-                     button(type="button" class="btn btn-default" data-dismiss="modal") Submit Changes
-    //-                     button(type="button" class="btn btn-default" data-dismiss="modal") Delete installation
-    //-                     button(type="button" class="btn btn-default" data-dismiss="modal") Cancel
+    form(id="installationForm" method="post" class="form-horizontal" style="display: none;")
+        div(class="form-group")
+            label(class="col-xs-3 control-label") Id
+            div(class="col-xs-3")
+                input(type="text" class="form-control" name="id" disabled="disabled")
+        div(class="form-group")
+            label(class="col-xs-3 control-label") Nom
+            div(class="col-xs-5")
+                input(type="text" class="form-control" name="nom")
+        div(class="form-group")
+            label(class="col-xs-3 control-label") Adresse
+            div(class="col-xs-5")
+                input(type="text" class="form-control" name="adresse") 
+        div(class="form-group")
+            label(class="col-xs-3 control-label") Arrondissement
+            div(class="col-xs-5")
+                input(type="text" class="form-control" name="arrondissement") 
+        div(class="form-group")
+            div(class="col-xs-5 col-xs-offset-3")
+                button(type="submit" class="btn btn-default") Save
