--- a/views/index.pug
+++ b/views/index.pug
@@ -15,48 +15,63 @@
 extends layout
 
 block content
-    div(class="modal fade" id="searchModal" role="dialog")
-        div(class="modal-dialog")
-            div(class="modal-content")
-                div(class="modal-header")
-                    h4(class="modal-title") Recherche d'installations
-                div(class="modal-body")
+    div(class='modal fade' id='searchModal' role='dialog')
+        div(class='modal-dialog')
+            div(class='modal-content')
+                div(class='modal-header')
+                    h4(class='modal-title') Recherche d'installations
+                div(class='modal-body')
                     form(method='GET' action='' id='form-arrondissement')
-                        div(class="form-group" class="col-form-label")
+                        div(class='form-group' class='col-form-label')
                             label(for='arrondissement') Par arrondissement
-                            input(type='text' class="form-control" id="field-arrondissement" placeholder='Arrondissement')
-                            button(id='submitArrondissement' class="btn btn-primary" data-dismiss="modal") Submit
-                    form(method='GET' action='' id="form-nom")
-                        div(class="form-group")
+                            input(type='text' class='form-control' id='field-arrondissement' placeholder='Arrondissement')
+                            button(id='submitArrondissement' class='btn btn-primary' data-dismiss='modal') Submit
+                    form(method='GET' action='' id='form-nom')
+                        div(class='form-group')
                             label(for='nom') Par nom d'installation
                             select(id='installations')
                                 each installation in installations
                                     option(value=installation id='field-nom') #{installation}
-                            button(id='submitNom' class="btn btn-primary" data-dismiss="modal") Submit
-                div(class="modal-footer")
-                    button(type="button" class="btn btn-default" data-dismiss="modal") Close
-    div(class="container-fluid")
+                            button(id='submitNom' class='btn btn-primary' data-dismiss='modal') Submit
+                div(class='modal-footer')
+                    button(type='button' class='btn btn-default' data-dismiss='modal') Close
+    div(class='container-fluid')
         h2 Hey look, a search button! Just Click on it to search various things.
-        button(type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#searchModal") Recherche
-    div(class="table-responsive")
-        table(id="myTable" class="table table-striped table-hover")
-    form(id="installationForm" method="post" class="form-horizontal" style="display: none;")
-        div(class="form-group")
-            label(class="col-xs-3 control-label") Id
-            div(class="col-xs-3")
-                input(type="text" class="form-control" name="id" disabled="disabled")
-        div(class="form-group")
-            label(class="col-xs-3 control-label") Nom
-            div(class="col-xs-5")
-                input(type="text" class="form-control" name="nom")
-        div(class="form-group")
-            label(class="col-xs-3 control-label") Adresse
-            div(class="col-xs-5")
-                input(type="text" class="form-control" name="adresse") 
-        div(class="form-group")
-            label(class="col-xs-3 control-label") Arrondissement
-            div(class="col-xs-5")
-                input(type="text" class="form-control" name="arrondissement") 
-        div(class="form-group")
-            div(class="col-xs-5 col-xs-offset-3")
-                button(type="submit" class="btn btn-default") Save
+        button(type='button' class='btn btn-info btn-lg' data-toggle='modal' data-target='#searchModal') Recherche
+    div(class='table-responsive')
+        table(id='myTable' class='table table-striped table-hover')
+    div(class='modal fade' id='installationModal' role='dialog')
+        div(class='modal-dialog')
+            div(class='modal-content')
+                div(class='modal-header')
+                    h5(class='modal-title') Edit installation
+                div(class='modal-body')
+                    form(id='installationForm' method='post' class='form-horizontal')
+                        div(class='form-group')
+                            label(class='col-xs-3 control-label') Id
+                            div(class='col-xs-3')
+                                input(type='text' class='form-control' name='id' disabled='disabled')
+                        div(class='form-group')
+                            label(class='col-xs-3 control-label') Type
+                            div(class='col-xs-5')
+                                input(type='text' class='form-control' name='type' disabled='disabled')
+                        div(class='form-group')
+                            label(class='col-xs-3 control-label') Nom
+                            div(class='col-xs-5')
+                                input(type='text' class='form-control' name='nom')
+                        div(class='form-group')
+                            label(class='col-xs-3 control-label') Adresse
+                            div(class='col-xs-5')
+                                input(type='text' class='form-control' name='adresse') 
+                        div(class='form-group')
+                            label(class='col-xs-3 control-label') Arrondissement
+                            div(class='col-xs-5')
+                                input(type='text' class='form-control' name='arrondissement')
+                        div(class='form-group')
+                            label(class='col-xs-3 control-label') Condition
+                            div(class='col-xs-5')
+                                input(type='text' class='form-control' name='condition')
+                div(class='modal-footer')
+                    button(type='submit' id='updateButton' class='btn btn-primary' data-dismiss='modal') Save Modifications
+                    button(type ='button' class='btn btn-secondary' data-dismiss='modal') Close 
+                            
