--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,8 +19,8 @@ html
         title= title
         link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css' integrity='sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb' crossorigin='anonymous')
         link(rel='stylesheet', href='stylesheets/style.css')
-        script(src='//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
-        script(src='//oss.maxcdn.com/bootbox/4.2.0/bootbox.min.js')
+        script(src='//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+        //- /*script(src='//oss.maxcdn.com/bootbox/4.2.0/bootbox.min.js')*/
         script(src='//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js')
         script(src='//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js')
         script(src="javascripts/scripts.js")
