--- a/views/index.pug
+++ b/views/index.pug
@@ -25,19 +25,19 @@ block content
                         div(class='form-group' class='col-form-label')
                             label(for='arrondissement') Par arrondissement
                             input(type='text' class='form-control' id='field-arrondissement' placeholder='Arrondissement')
-                            button(id='submitArrondissement' class='btn btn-primary' data-dismiss='modal') Submit
+                            button(id='submitArrondissement' class='btn btn-primary' data-dismiss='modal' style='margin-top:5px') Submit
                     form(method='GET' action='' id='form-nom')
                         div(class='form-group')
                             label(for='nom') Par nom d'installation
                             select(id='installations')
                                 each installation in installations
                                     option(value=installation id='field-nom') #{installation}
-                            button(id='submitNom' class='btn btn-primary' data-dismiss='modal') Submit
+                            button(id='submitNom' class='btn btn-primary' data-dismiss='modal' style='margin-top:5px') Submit
                 div(class='modal-footer')
                     button(type='button' class='btn btn-default' data-dismiss='modal') Close
     div(class='container-fluid')
         h2 Hey look, a search button! Just Click on it to search various things.
-        button(type='button' class='btn btn-info btn-lg' data-toggle='modal' data-target='#searchModal') Recherche
+        button(type='button' class='btn btn-success btn-lg' data-toggle='modal' data-target='#searchModal') Recherche
     div(class='table-responsive')
         table(id='myTable' class='table table-striped table-hover')
     div(class='modal fade' id='installationModal' role='dialog')
