Correction bug modification glissade dans form

--- a/views/index.pug
+++ b/views/index.pug
@@ -54,7 +54,7 @@ block content
                         div(class='form-group')
                             label(class='col-xs-3 control-label') Type
                             div(class='col-xs-5')
-                                input(type='text' class='form-control' name='type' disabled='disabled')
+                                input(type='text' class='form-control' name='type')
                         div(class='form-group')
                             label(class='col-xs-3 control-label') Nom
                             div(class='col-xs-5')
